--- a/index.html
+++ b/index.html
@@ -3,15 +3,20 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Дашь мне 100тг?</title>
-    <link rel="stylesheet" href="style.css">
+    <title>Pay Me Now</title>
+    <style>
+        body {
+            background-color: white;
+            display: flex;
+            justify-content: center;
+            align-items: center;
+            height: 100vh;
+            font-size: 24px;
+            font-family: Arial, sans-serif;
+        }
+    </style>
 </head>
 <body>
-    <div class="container">
-        <h1>Ты дашь мне 100 тенге? ❤️</h1>
-        <button id="yes-btn">Да</button>
-        <button id="no-btn">Нет</button>
-    </div>
-    <script src="script.js"></script>
+    <p>Дашь мне 1000тг?</p>
 </body>
 </html>
